--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,9 @@ CORS_METHODS=["GET", "POST", "PUT", "DELETE", "OPTIONS"]
 CORS_HEADERS=["Accept", "Content-Type", "Authorization", "Confirmation"]
 CORS_EXPOSE_HEADERS=["content-type", "content-length"]
 
+DATABASE_USER=postgres
+DATABASE_PASSWORD=postgres
+DATABASE_NAME=main_database
 DATABASE_LINK=postgres://user:password@127.0.0.1:5432/main_database
 TEST_DATABASE_LINK=postgres://user:password@127.0.0.1:5432/test_database
 
