--- a/.env.example
+++ b/.env.example
@@ -11,14 +11,14 @@ AUTH_JWT_ACCESS_LIFETIME=86400
 AUTH_JWT_REFRESH_LIFETIME=604800
 
 CORS_ORIGINS=["*"]
-CORS_METHODS=["GET", "POST", "PUT", "DELETE", "OPTIONS"]
+CORS_METHODS=["GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"]
 CORS_HEADERS=["Accept", "Content-Type", "Authorization", "Confirmation"]
 CORS_EXPOSE_HEADERS=["content-type", "content-length"]
 
 DATABASE_USER=postgres
 DATABASE_PASSWORD=postgres
 DATABASE_NAME=main_database
-DATABASE_LINK=postgres://user:password@127.0.0.1:5432/main_database
+DATABASE_LINK=postgres://postgres:postgres@127.0.0.1:5432/main_database
 TEST_DATABASE_LINK=postgres://user:password@127.0.0.1:5432/test_database
 
 DEBUG=false
